# mietrecht-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fetch_legal_data.py  main.py  pyproject.toml
docker/: entrypoint.sh
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx  pdfFont.ts
src/: auth.py  config.py  db.py  usage.py
src/agent/: graph.py  nodes.py  prompts.py  security.py  state.py
src/api/: __init__.py  app.py  deps.py  schemas.py  sse.py  streaming.py
src/cases/: store.py
src/chat_history/: __init__.py  store.py
src/contracts/: extract_facts.py  parse.py  review.py  segment.py
src/eval/: dataset.py  runner.py
src/feedback/: store.py
src/ingest/: case_law.py  chunking.py  contextual.py  statutes.py
src/logging/: __init__.py  callbacks.py
src/memory/: store.py
src/retrieval/: hybrid.py
src/tools/: __init__.py  case_tools.py  operating_costs.py  (+3 more)
tests/: test_api.py  test_auth.py  test_case_context.py  test_case_law_filter.py  test_case_tools.py  test_cases_api.py  test_chat_history.py  test_chunking.py  test_contextual.py  test_contracts.py  test_eval_dataset.py  test_eval_runner.py  test_extract_facts.py  test_fetch_legal_data.py  test_hybrid_retrieval.py  test_logging_callback.py  test_memory_store.py  test_prompts.py  test_retrieval_tools.py  test_security.py  test_sources.py  test_tools.py  test_usage.py
(+35 files in other folders)
