[project]
name = "mietrecht-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain-classic>=1.0.7",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "langsmith>=0.8.5",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "fpdf2>=2.8.0",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langchain-postgres>=0.0.17",
    "psycopg[binary]>=3.3.4",
    "tiktoken>=0.13.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "Pillow>=11.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
]

[dependency-groups]
dev = [
    "datasets>=4.8.5",
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
    "pytest>=9.0.3",
    "ragas>=0.4.3",
    "ruff>=0.15.13",
]
